unpackaged/main/default/objects/Enquiries_and_Bookings__c/Enquiries_and_Bookings__c.object-meta.xml
<CustomObject>
    <label>Bookings</label>
    <nameField>
        <label>Enquiry Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enquiries and Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>