unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Actual_Nights_Formula__c.field-meta.xml
<CustomField>
    <fullName>Actual_Nights_Formula__c</fullName>
    <formula>IF(OR(Today() -  Check_In_Date__c  &lt;= 0,(Today() - Check_In_Date__c &gt;  Number_of_Nights__c)) , 0 , Today() -  Check_In_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Nights Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>