unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Booking_7_13_Nights__c.field-meta.xml
<CustomField>
    <fullName>Booking_7_13_Nights__c</fullName>
    <formula>IF ( AND (Number_of_Nights__c &gt; 6,  Number_of_Nights__c &lt; 14), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking 7 - 13 Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>