unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Booking_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Creation_Date__c</fullName>
    <label>Booking Creation Date</label>
    <type>Date</type>
</CustomField>