unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Booking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Booking_Fee__c</fullName>
    <label>Booking Fee %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>