unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Booking_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Booking_Fee_Amount__c</fullName>
    <label>Booking Fee Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>