unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Booking_Fee_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Booking_Fee_Amount_Formula__c</fullName>
    <formula>Total_Booking_Value_Formula__c  *  Booking_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Fee Amount Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>