unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Booking_Revenue_Last_Month_RU__c.field-meta.xml
<CustomField>
    <fullName>Booking_Revenue_Last_Month_RU__c</fullName>
    <label>Booking Revenue Last Month</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>