unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Booking_Revenue_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Booking_Revenue_Last_Year__c</fullName>
    <formula>(((Commission_Amount_Formula__c - Client_Commission_Amount_Formula__c) + Booking_Fee_Amount_Formula__c) / Number_of_Nights__c) *

IF(MIN((Check_Out_Date__c - Check_In_Date__c),
(Check_Out_Date__c - Last_Year_Start_Date_Formula__c),
(Last_Year_End_Date_Formula__c - Last_Year_Start_Date_Formula__c),
(Last_Year_End_Date_Formula__c - Check_In_Date__c)) &gt; 0,
MIN((Check_Out_Date__c - Check_In_Date__c),
(Check_Out_Date__c - Last_Year_Start_Date_Formula__c),
(Last_Year_End_Date_Formula__c - Last_Year_Start_Date_Formula__c),
(Last_Year_End_Date_Formula__c - Check_In_Date__c)),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Revenue Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>