unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Booking_under_7_nights__c.field-meta.xml
<CustomField>
    <fullName>Booking_under_7_nights__c</fullName>
    <formula>If ( Number_of_Nights__c &lt; 7, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking under 7 nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>