unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/BookingID__c.field-meta.xml
<CustomField>
    <fullName>BookingID__c</fullName>
    <externalId>true</externalId>
    <label>Booking ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>