unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Bookings_14_20_nights__c.field-meta.xml
<CustomField>
    <fullName>Bookings_14_20_nights__c</fullName>
    <formula>IF ( AND (Number_of_Nights__c &gt; 13,  Number_of_Nights__c &lt; 21), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings 14 - 20 nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>