unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Bookings_in_This_Year_Formula__c.field-meta.xml
<CustomField>
    <fullName>Bookings_in_This_Year_Formula__c</fullName>
    <formula>IF(AND(ISPICKVAL( Enquiry_Status__c , &quot;Closed Booked&quot;),    Date_of_Booking__c   &gt;=    This_Year_Start_Date_Formula__c   ,  Date_of_Booking__c  &lt;=    This_Year_End_Date_Formula__c   ), 1, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings in This Year Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>