unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Bookings_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Last_Month__c</fullName>
    <label>Bookings Last Month</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>