unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Bookings_Over_20_Nighrs__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Over_20_Nighrs__c</fullName>
    <formula>IF ( Number_of_Nights__c &gt; 20 , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings Over 20 Nighrs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>