unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Check_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Date__c</fullName>
    <label>Check Out Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>