unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Client_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Client_Commission_Amount__c</fullName>
    <label>Client Commission Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>