unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Client_Commission_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Client_Commission_Amount_Formula__c</fullName>
    <formula>Total_Booking_Value_Formula__c  *  Client_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Commission Amount Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>