unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference__c</fullName>
    <label>Client Reference</label>
    <length>150</length>
    <type>Text</type>
</CustomField>