unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact Type value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Id</field>
            <operation>equals</operation>
            <value>0124K000000HxcaQAC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enquiries and Bookings (Contact)</relationshipLabel>
    <relationshipName>Enquiries_and_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>