unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Current_Notes__c.field-meta.xml
<CustomField>
    <fullName>Current_Notes__c</fullName>
    <label>Current Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>