unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Date_Time_First_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_First_Created__c</fullName>
    <label>Date/Time First Created</label>
    <type>DateTime</type>
</CustomField>