unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Date_Time_First_Re_Quoting__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_First_Re_Quoting__c</fullName>
    <label>Date/Time First Re Quoting</label>
    <type>DateTime</type>
</CustomField>