unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Date_Time_First_ReQuoted__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_First_ReQuoted__c</fullName>
    <label>Date/Time First ReQuoted</label>
    <type>DateTime</type>
</CustomField>