unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Date_Time_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Quoted__c</fullName>
    <formula>IF(  ISPICKVAL( Enquiry_Status__c , &quot;Quoted&quot;)  , NOW(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Quoted</label>
    <type>DateTime</type>
</CustomField>