unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Date_Time_ReQuoted__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_ReQuoted__c</fullName>
    <formula>IF( ISPICKVAL( Enquiry_Status__c , &quot;ReQuoted&quot;) , NOW(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time ReQuoted</label>
    <type>DateTime</type>
</CustomField>