unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Enquires_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Enquires_Last_Year__c</fullName>
    <formula>IF(AND( Created_Date__c &gt;= Last_Year_Start_Date_Formula__c , Created_Date__c &lt;= Last_Year_End_Date_Formula__c ),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquires Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>