unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Enquires_This_Quarter_Last_YearN__c.field-meta.xml
<CustomField>
    <fullName>Enquires_This_Quarter_Last_YearN__c</fullName>
    <description>This is a number field that pulls data from a formula field to enable the creation of a roll up summary via flows. This field is populated using a process.</description>
    <label>Enquires This Quarter Last YearN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>