unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Enquiries_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_Last_Month__c</fullName>
    <formula>IF(AND( Created_Date__c  &gt;=   Last_Month_Start_Date_Formula__c  , Created_Date__c &lt;=   Last_Month_End_Date_Formula__c  ),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiries Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>