unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Enquiries_This_Quarter_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_This_Quarter_Last_Year__c</fullName>
    <description>This formula is created to calculate enquires this quarter last year. There is a corresponding number field that pulls the data out this formula and creates a roll up in Accounts corresponding field</description>
    <formula>IF(AND( Created_Date__c  &gt;=     This_Qtr_Last_Year_Start_Date_Formula__c    ,  Created_Date__c  &lt;=     This_Qtr_Last_Year_End_Date_Formula__c    ), 1, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiries This Quarter Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>