unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Enquiries_This_Year_Formula__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_This_Year_Formula__c</fullName>
    <formula>IF(AND( Created_Date__c &gt;= This_Year_Start_Date_Formula__c , Created_Date__c &lt;= This_Year_End_Date_Formula__c ),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiries This Year Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>