unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Enquiry_Source__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Source__c</fullName>
    <label>Enquiry Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone Enquiry</fullName>
            </value>
            <value>
                <fullName>Email Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>