unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Enquiry_Status__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Status__c</fullName>
    <label>Enquiry Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Enquiry_Status</valueSetName>
    </valueSet>
</CustomField>