unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Enquiry_to_Quote_SLA_Timer__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_to_Quote_SLA_Timer__c</fullName>
    <formula>IF(NOT( ISBLANK( Date_Time_First_Quoted__c )) , SLA_Timer_Enquiry_to_Quote__c, ROUND( 510 * (
   ( 5 * FLOOR( ( DATEVALUE( NOW() ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( NOW() ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 1440 / 510* ( MOD( NOW() - DATETIMEVALUE( &#39;1900-01-08 08:00:00&#39; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( Date_Time_First_Created__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( Date_Time_First_Created__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 1440 / 510 * ( MOD( Date_Time_First_Created__c - DATETIMEVALUE( &#39;1900-01-08 08:00:00&#39; ), 1) ) )
    )
   ) 
  ), 
2 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiry to Quote SLA Timer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>