unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Enquiry_to_Quote_Time__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_to_Quote_Time__c</fullName>
    <formula>((Date_Time_First_Quoted__c  - Date_Time_First_Created__c) * 24  * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiry to Quote Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>