unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/EnquiryID__c.field-meta.xml
<CustomField>
    <fullName>EnquiryID__c</fullName>
    <externalId>true</externalId>
    <label>Enquiry ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>