unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Epicentre__c.field-meta.xml
<CustomField>
    <fullName>Epicentre__c</fullName>
    <label>Location Geocoordinates</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>