unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Guest1__c.field-meta.xml
<CustomField>
    <fullName>Guest1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Guest Type value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Id</field>
            <operation>equals</operation>
            <value>0128e000000Xkyu</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enquiries and Bookings (Guest)</relationshipLabel>
    <relationshipName>Enquiries_and_Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>