unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Guest__c.field-meta.xml
<CustomField>
    <fullName>Guest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest Email</label>
    <referenceTo>Guest__c</referenceTo>
    <relationshipName>Enquiries_and_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>