unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Guest_Account__c.field-meta.xml
<CustomField>
    <fullName>Guest_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Enquiries_and_Bookings_Guests</relationshipName>
    <type>Lookup</type>
</CustomField>