unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Guest_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_First_Name__c</fullName>
    <label>Guest First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>