unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Is_it_a_Live_Booking__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_Live_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is it a Live Booking?</label>
    <type>Checkbox</type>
</CustomField>