unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Is_This_a_Booking__c.field-meta.xml
<CustomField>
    <fullName>Is_This_a_Booking__c</fullName>
    <formula>IF(ISPICKVAL( Enquiry_Status__c , &quot;Closed Booked&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is This a Booking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>