unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Last_Month_Client_Commission_Formua__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Client_Commission_Formua__c</fullName>
    <formula>Last_Month_Revenue_Formula__c  *  Client_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Month Client Commission Formua</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>