unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Last_Month_Commission_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Commission_Formula__c</fullName>
    <formula>Last_Month_Revenue_Formula__c  *  Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Month Commission Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>