unpackaged/main/default/objects/Enquiries_and_Bookings__c/fields/Last_Month_End_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_End_Date_Formula__c</fullName>
    <formula>addMonths(  This_Month_End_Date_Formula__c  ,-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Month End Date Formula</label>
    <type>Date</type>
</CustomField>